manny page complete

--- a/games/Manny.qmd
+++ b/games/Manny.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Manny Takes on Upper Management"
 description: "Retro Turn-based Tactic Game with Satirical Tone made in a 15 week cycle"
+image: imgs/manny_cover_art.png
 format: html
 ---
 
@@ -14,17 +15,48 @@ format: html
 }
 </style>
 
+:::{.column-centered}
+```{=html}
+<iframe frameborder="0" src="https://itch.io/embed/3394917?bg_color=222222&amp;fg_color=eeeeee&amp;border_color=363636" width="552" height="167"><a href="https://oscarshs.itch.io/manny-takes-on-upper-management">Manny Takes on Upper Management (Demo) by Oscar (Shang-Hsuan) Su, Brendan Aeria, LemonInk, Abignerd1, eljefe_vive, eigenstuffs, johncast, oranj.juice, werus23, Billybobnot1</a></iframe>
+```
+
+I lead the development of this game with other UCLA students within a 15-week development period. This is a completed game with a complete storyline, 10 levels, 20 enemy types, and 50+ skills.
+
+:::
+
+:::{.shrunk-content-width}
+:::{layout-nrow=2 layout-valign="bottom"}
+![](imgs/manny_overworld.png){width=15%}
+
+![](imgs/manny_party_manage.png){width=20%}
+
+![](imgs/manny_poison.png)
+
+![](imgs/manny_pickup.png)
+:::
+:::
+
 ## My role
 
-- Primary team lead
+- Primary lead of the team of 10
 - Project management
 - System design
-- Level design
+- Level design (10 levels)
+- Enemy design (20 enemy types)
 - Implement features including
   - Hexagon-shaped tile map navigation (made an editor plug-in which can be found [here](https://godotengine.org/asset-library/asset/3747))
   - Skill system and 50+ skills
+  - Main combat mechanic -- *Power of Friendship*!
   - Enemy AI
   - Dialogue tagging system
   - UI/UX (menus, skill selection interface)
+
+:::{layout-ncol=3 layout-valign="bottom"}
+![hexagon-grid navigation](imgs/manny_navi.gif)
+
+![power of friendship](imgs/manny_pof.gif)
+
+![team member unlock interface](imgs/manny_select.gif)
+:::
 
 I have written up more about some aspects of the development (and product management) on this [page](https://battle-tuba-86d.notion.site/Manny-Takes-on-Upper-Management-21c36b6ca99780238cddd05479be9441?pvs=143). Feel free to check it out!
