--- a/projects.qmd
+++ b/projects.qmd
@@ -1,7 +1,11 @@
 ---
 title: "Projects"
 listing:
+  id: project-list
   contents: projects
 ---
 
-This is where I put all my past statistics and data science projects.
+Check out some of my data analysis and research projects from below!
+
+:::project-list
+:::
