--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ about:
       icon: file
 ---
 
-Hello! I'm Oscar. I like to ask questions, answer them, and use what I found to create cool tools and experiences. I do research, build tools to make others' works easier, and design/program video games for my friends to play. With everything I do, I strive to make it fun, impactful, and memorable.
+Hello! I'm Oscar. I like to ask questions, answer them, and use what I found to create cool tools and experiences. I do research, build tools to make others' works easier, and design & program video games for my friends to play. For everything I create, I strive to make it fun, impactful, and memorable.
 
 Check out my projects and games from the menu bar or get in touch with me through the platforms below!
 
