--- a/projects.qmd
+++ b/projects.qmd
@@ -3,6 +3,7 @@ title: "Projects"
 listing:
   id: project-list
   contents: projects
+  type: grid
 ---
 
 Check out some of my data analysis and research projects from below!
