--- a/games/Mutiny.qmd
+++ b/games/Mutiny.qmd
@@ -5,31 +5,25 @@ image: imgs/mutiny_cover_art.jpeg
 format: html
 ---
 
-<style>
-#title-block-header .title {
-  text-align: center;
-}
+---
 
-#title-block-header .description {
-  text-align: center;
-}
-</style>
-
-::: {.column-centered}
+**Play the game here!**
 
 ```{=html}
 <iframe frameborder="0" src="https://itch.io/embed/3939772?linkback=true&amp;bg_color=222222&amp;fg_color=eeeeee&amp;border_color=363636" width="550" height="167"><a href="https://oscarshs.itch.io/mutinys-final-reward">Mutiny's Final Reward by Oscar (Shang-Hsuan) Su, johncast</a></iframe>
 ```
 
-![](imgs/mutiny_chaos.gif)
+The game will be opened on a new page so you can come back and read more about how I made it at anytime.
 
-Out of ~1500 entries, our game got 39th place in Fun (top 2%) and 97th Overall (top 7%)!
+---
 
-![](imgs/mutiny_ld_score.png){width=75%}
+![](imgs/mutiny_chaos.gif){width=50%}
 
-It was really fun making this game, and I'm really glad I have finally made it to within top 100.
+Out of ~1500 entries, our game got **39th place in Fun (top 2%)** and **97th Overall (top 7%)**!
 
-:::
+![](imgs/mutiny_ld_score.png){width=50%}
+
+It was really fun making this game, and I'm really glad I have finally made it to within top 100 with my fourth LD attempt.
 
 ## My role
 
@@ -41,7 +35,9 @@ It was really fun making this game, and I'm really glad I have finally made it t
 - Gathered player feedback and improved game feel iteratively and rapidly
 
 :::{layout-ncol=2}
-![Trajectory Preview](imgs/mutiny_trajectory.png)
+![Trajectory Preview (pink dashed line)](imgs/mutiny_trajectory.png)
 
-![Responsive Text Size](imgs/mutiny_big_text.png)
+![Responsive Text Size (it gets bigger everytime you bounce)](imgs/mutiny_big_text.png)
 :::
+
+You can also check out the [Ludum Dare page](https://ldjam.com/events/ludum-dare/58/$416602) and see what other players have said about our game!
