--- a/games/Manny.qmd
+++ b/games/Manny.qmd
@@ -7,17 +7,15 @@ format: html
 
 ---
 
-**Play the game here!**
+**Play the game through the link below!**
 
 ```{=html}
 <iframe frameborder="0" src="https://itch.io/embed/3394917?bg_color=222222&amp;fg_color=eeeeee&amp;border_color=363636" width="552" height="167"><a href="https://oscarshs.itch.io/manny-takes-on-upper-management">Manny Takes on Upper Management (Demo) by Oscar (Shang-Hsuan) Su, Brendan Aeria, LemonInk, Abignerd1, eljefe_vive, eigenstuffs, johncast, oranj.juice, werus23, Billybobnot1</a></iframe>
 ```
 
-The game will be opened on a new page so you can come back and read more about how I made it at anytime.
-
 ---
 
-I lead the development of this game with other UCLA students within a 15-week development period. This is a completed game with a complete storyline, 10 levels, 20 enemy types, and 50+ skills.
+I led the development of this game with other UCLA students within a 15-week development period. This is a completed game with a complete storyline, 10 levels, 20 enemy types, and 50+ skills.
 
 :::{layout-nrow=2 layout-valign="bottom"}
 ![](imgs/manny_overworld.png){width=15%}
@@ -36,13 +34,14 @@ I lead the development of this game with other UCLA students within a 15-week de
 - System design
 - Level design (10 levels)
 - Enemy design (20 enemy types)
-- Implement features including
+- Implementation of features including
   - Hexagon-shaped tile map navigation (made an editor plug-in which can be found [here](https://godotengine.org/asset-library/asset/3747))
   - Skill system and 50+ skills
   - Main combat mechanic -- *Power of Friendship*!
   - Enemy AI
   - Dialogue tagging system
-  - UI/UX (menus, skill selection interface)
+  - Save and load system
+- Implementation of UI/UX (menus, skill selection interface)
 
 :::{layout="[[1,1], [1]]" layout-valign="bottom"}
 
